--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -1,1 +1,3 @@
-@import url("https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap");
+// @import url("https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap");
+
+@import url("https://fonts.cdnfonts.com/css/creato-display");
