--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,7 +16,7 @@
     h1,
     h2,
     h3 {
-        @apply font-black;
+        @apply font-serif font-extrabold;
     }
     h1 {
         @apply font-black;
