--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -1,3 +1,5 @@
 // @import url("https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap");
 
-@import url("https://fonts.cdnfonts.com/css/creato-display");
+// @import url("https://fonts.cdnfonts.com/css/creato-display");
+
+@import url("https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&f[]=cabinet-grotesk@800,700,900&display=swap");
