--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -49,6 +49,9 @@
     &__blue_1 {
         @apply bg-blue_1 text-white;
     }
+    &__blue {
+        @apply bg-blue text-white;
+    }
 }
 
 input:focus,
@@ -62,3 +65,76 @@ nav {
         @apply text-primary font-bold;
     }
 }
+
+.scroll {
+    width: 50px;
+    height: 50px;
+    border: 2px solid #000061;
+    border-radius: 50%;
+    position: relative;
+    animation: down 1.5s infinite;
+    -webkit-animation: down 1.5s infinite;
+}
+.scroll::before {
+    content: "";
+    position: absolute;
+    top: 16px;
+    left: 18px;
+    width: 12px;
+    height: 12px;
+    border-left: 3px solid #000061;
+    border-bottom: 3px solid #000061;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+}
+
+@keyframes down {
+    0% {
+        transform: translate(0);
+    }
+    20% {
+        transform: translateY(15px);
+    }
+    40% {
+        transform: translate(0);
+    }
+}
+@-webkit-keyframes down {
+    0% {
+        transform: translate(0);
+    }
+    20% {
+        transform: translateY(15px);
+    }
+    40% {
+        transform: translate(0);
+    }
+}
+
+@keyframes scroll {
+    0% {
+        height: 40px;
+    }
+    30% {
+        height: 70px;
+    }
+    60% {
+        height: 40px;
+    }
+}
+@-webkit-keyframes scroll {
+    0% {
+        height: 40px;
+    }
+    30% {
+        height: 70px;
+    }
+    60% {
+        height: 40px;
+    }
+}
+
+@import url(/assets/others/loaders.scss);
