--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -2,4 +2,6 @@
 
 // @import url("https://fonts.cdnfonts.com/css/creato-display");
 
-@import url("https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&f[]=cabinet-grotesk@800,700,900&display=swap");
+// @import url("https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&f[]=cabinet-grotesk@800,700,900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
