--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,13 +16,15 @@
     h1,
     h2,
     h3 {
-        @apply font-serif font-extrabold;
+        @apply font-sans font-bold;
     }
     h1 {
+        letter-spacing: -1.5px;
         @apply font-black;
     }
     h2 {
         @apply text-2xl sm:text-2xl;
+        line-height: 1.2 !important;
     }
 
     a {
