--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,20 +16,21 @@
     h1,
     h2,
     h3 {
-        @apply font-sans font-bold;
+        @apply font-serif font-bold;
     }
     h1 {
-        letter-spacing: -1.5px;
-        @apply font-black;
+        // letter-spacing: -1.5px;
+        @apply font-extrabold;
+        line-height: 1.2 !important;
     }
     h2 {
-        @apply text-2xl sm:text-2xl;
+        @apply text-2xl sm:text-2xl font-extrabold;
         line-height: 1.2 !important;
-        letter-spacing: -1.5px;
+        // letter-spacing: -1.5px;
     }
     h3 {
-        line-height: 1.4 !important;
-        letter-spacing: -0.7px;
+        line-height: 1.2 !important;
+        // letter-spacing: -0.7px;
     }
 
     a {
