--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -19,18 +19,18 @@
         @apply font-serif font-bold;
     }
     h1 {
-        // letter-spacing: -1.5px;
+        letter-spacing: -1.5px;
         @apply font-extrabold;
         line-height: 1.2 !important;
     }
     h2 {
         @apply text-2xl sm:text-2xl font-extrabold;
         line-height: 1.2 !important;
-        // letter-spacing: -1.5px;
+        letter-spacing: -0.5px;
     }
     h3 {
         line-height: 1.2 !important;
-        // letter-spacing: -0.7px;
+        letter-spacing: -0.5px;
     }
 
     a {
