--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -64,6 +64,9 @@
     &__blue {
         @apply bg-blue text-white;
     }
+    &:hover {
+        @apply underline scale-105 transition-all duration-500 ease-in-out;
+    }
 }
 
 input:focus,
@@ -85,8 +88,8 @@ nav,
     border: 2px solid #000061;
     border-radius: 50%;
     position: relative;
-    animation: down 1.5s infinite;
     -webkit-animation: down 1.5s infinite;
+    animation: down 1.5s infinite;
 }
 .scroll::before {
     content: "";
@@ -97,11 +100,11 @@ nav,
     height: 12px;
     border-left: 3px solid #000061;
     border-bottom: 3px solid #000061;
-    transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
 }
 
 @keyframes down {
