--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -177,7 +177,7 @@ nav,
     }
 
     blockquote {
-        @apply mb-6 dark:text-gray-600 bg-blue bg-opacity-10 border-l-2  border-l-indigo-200  p-4  border-2 border-gray-50 rounded-md;
+        @apply mb-6  bg-blue bg-opacity-[0.07] border-l-2  border-l-blue  p-4;
     }
 
     a {
