--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -173,7 +173,7 @@ nav,
         -o-border-radius: 8px;
         border-radius: 8px;
 
-        @apply max-h-[300px] w-full object-cover mb-6;
+        @apply w-full object-cover mb-6;
     }
 
     p {
